<resources>
    <string name="app_name">FinalProject</string>

    <string name="hint">Enter your name </string>
    <string name="menu_title">Menu</string>
    <string name="order_title">Order</string>
    <string name="order_summary_title">Order Summary</string>

    <string name="Customizations">CUSTOMIZATIONS</string>
    <string name="milk_choices">Milk Choices</string>
    <string name="sugar_choices">Sugar Choices</string>
    <string name="quantity">Quantity</string>
    <string name="brew_tea">BREW COFFEE</string>
    <string name="initial_cost">$0.00</string>
    <string name="initial_quantity_value">0</string>
    <string name="tea_size">Size</string>
    <string name="tea_size_small">Small ($5/cup)</string>
    <string name="tea_size_medium">Medium ($6/cup)</string>
    <string name="tea_size_large">Large ($7/cup)</string>
    <string name="milk_type_none">None</string>
    <string name="milk_type_nonfat">Nonfat Milk</string>
    <string name="milk_type_1_percent">1% Milk</string>
    <string name="milk_type_2_percent">2% Milk</string>
    <string name="milk_type_whole">Whole Milk</string>
    <string name="sweet_type_0">0% - Not Sweet</string>
    <string name="sweet_type_25">25% - Slightly Sweet</string>
    <string name="sweet_type_50">50% - Half Sweet</string>
    <string name="sweet_type_75">75% - Moderately Sweet</string>
    <string name="sweet_type_100">100% - Full Sweetness</string>

    <string name="order_summary" />
    <string name="total">Total</string>
    <string name="summary_tea_label">Coffee Type</string>
    <string name="summary_size_label">Size</string>
    <string name="summary_milk_label">Milk Type</string>
    <string name="summary_sugar_label">Sugar Amount</string>
    <string name="summary_total_label">Order Total</string>
    <string name="summary_quantity_label">Quantity</string>

    <string name="summary_email_prompt">Let your friends know you just ordered a delicious Coffee from CoffeeTime and they can too!</string>
    <string name="send_email">Send Email</string>
    <string name="order_summary_email_subject">Freshly Brewed from CoffeeTime</string>
    <string name="email_message">I just ordered a delicious coffee from CoffeeTime. Next time you are craving a coffee, check them out!</string>

    <string name="done_msg">Your Coffee is ready!</string>
    <string name="loading_msg">Loading images</string>

    <string-array name="tea_size_array">
        <item>Small ($5/cup)</item>
        <item>Medium ($6/cup)</item>
        <item>Large ($7/cup)</item>
    </string-array>

    <string-array name="milk_array">
        <item>None</item>
        <item>Nonfat Milk</item>
        <item>1% Milk</item>
        <item>2% Milk</item>
        <item>Whole Milk</item>
    </string-array>

    <string-array name="sugar_array">
        <item>0% - Not Sweet</item>
        <item>25% - Slightly Sweet</item>
        <item>50% - Half Sweet</item>
        <item>75% - Moderately Sweet</item>
        <item>100% - Full Sweetness</item>
    </string-array>
</resources>

