<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_id"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Coffee">

            <ImageView
                android:id="@+id/collapse_image_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bananaramaa"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AlertDialog.AppCompat.Light"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/coffee_card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/activity_tea_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    style="@style/FormTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#6f4e37"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/default_gap"
                    android:text="@string/Customizations"
                    android:textColor="#FFFFFF" />


                <RelativeLayout
                    android:id="@+id/sizeLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/default_gap">

                    <TextView
                        android:id="@+id/sizeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tea_size" />

                    <Spinner
                        android:id="@+id/tea_size_spinner"
                        style="@style/FormTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sizeLabel"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:drawSelectorOnTop="true" />

                </RelativeLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:id="@+id/milkLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/default_gap">

                    <TextView
                        android:id="@+id/milkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/milk_choices" />

                    <Spinner
                        android:id="@+id/milk_spinner"
                        style="@style/FormTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/milkLabel"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:drawSelectorOnTop="true" />

                </RelativeLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:id="@+id/sugarLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/default_gap">

                    <TextView
                        android:id="@+id/sugarLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugar_choices" />

                    <Spinner
                        android:id="@+id/sugar_spinner"
                        style="@style/FormTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sugarLabel"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:drawSelectorOnTop="true" />

                </RelativeLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:id="@+id/quantityLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/default_gap">

                    <TextView
                        android:id="@+id/quantityLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/decrement_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@null"
                            android:onClick="decrement"
                            android:text="-"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/quantity_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/initial_quantity_value"
                            android:textColor="@android:color/black"
                            android:textSize="22sp" />

                        <Button
                            android:id="@+id/increment_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@null"
                            android:onClick="increment"
                            android:text="+"
                            android:textSize="22sp" />
                    </LinearLayout>

                </RelativeLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/default_gap"
                    android:paddingBottom="@dimen/default_gap">

                    <TextView
                        android:id="@+id/total"
                        style="@style/FormTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/total" />

                    <TextView
                        android:id="@+id/cost_text_view"
                        style="@style/FormTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center" />

                </LinearLayout>

                <Button
                    android:id="@+id/brew_tea_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="brewTea"
                    android:text="@string/brew_tea" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>